--- a/_teaching/2020~2013-teaching.md
+++ b/_teaching/2020~2013-teaching.md
@@ -1,11 +1,11 @@
 ---
 title: "Teaching experience 2"
 collection: teaching
-type: "Workshop"
-permalink: /teaching/2015-spring-teaching-1
-venue: "University 1, Department"
-date: 2015-01-01
-location: "City, Country"
+type: "Lecture"
+permalink: /teaching/2020~2013-teaching
+venue: "UniBH, Department of Electrical Engineering"
+date: 2020-01-01
+location: "Belo Horizonte, Brazil"
 ---
 
 This is a description of a teaching experience. You can use markdown like any other post.
