Update and rename 2014-spring-teaching-1.md to 2013~2011-teaching.md

--- a/_teaching/2013~2011-teaching.md
+++ b/_teaching/2013~2011-teaching.md
@@ -2,7 +2,7 @@
 title: "Teaching experience 1"
 collection: teaching
 type: "Technical course"
-permalink: /teaching/2014-spring-teaching-1
+permalink: /teaching/2013~2011-teaching
 venue: "UTRAMIG, Mechatronics"
 date: 2014-01-01
 location: "Vespasiano, Brazil"
@@ -10,11 +10,20 @@ location: "Vespasiano, Brazil"
 
 This is a description of a teaching experience. You can use markdown like any other post.
 
-Heading 1
+2013/S2
 ======
 
-Heading 2
+2013/S1
 ======
 
-Heading 3
+2012/S2
+======
+
+2012/S1
+======
+
+2011/S2
+======
+
+2011/S1
 ======
