--- a/_teaching/2020~2013-teaching.md
+++ b/_teaching/2020~2013-teaching.md
@@ -1,7 +1,7 @@
 ---
 title: "Teaching experience 2"
 collection: teaching
-type: "Lecture"
+type: "Undergraduate Course"
 permalink: /teaching/2020~2013-teaching
 venue: "UniBH, Department of Electrical Engineering"
 date: 2020-01-01
@@ -10,11 +10,44 @@ location: "Belo Horizonte, Brazil"
 
 This is a description of a teaching experience. You can use markdown like any other post.
 
-Heading 1
+2019/S2
 ======
 
-Heading 2
+2019/S1
 ======
 
-Heading 3
+2018/S2
+======
+
+2018/S1
+======
+
+2017/S2
+======
+
+2017/S1
+======
+
+2016/S2
+======
+
+2016/S1
+======
+
+2015/S2
+======
+
+2015/S1
+======
+
+2014/S2
+======
+
+2014/S1
+======
+
+2013/S2
+======
+
+2013/S1
 ======
