--- a/_teaching/2020~2013-teaching.md
+++ b/_teaching/2020~2013-teaching.md
@@ -48,6 +48,11 @@ This is a description of a teaching experience. You can use markdown like any ot
 
 2013/S2
 ======
+Courses:
+  * Electrical Circuits 1 (Laboratory)
+  * Analog Electronics (Laboratory)
 
 2013/S1
 ======
+Courses:
+  * Electrical Circuits 1 (Laboratory)
