--- a/_teaching/2020~2013-teaching.md
+++ b/_teaching/2020~2013-teaching.md
@@ -8,51 +8,112 @@ date: 2020-01-01
 location: "Belo Horizonte, Brazil"
 ---
 
-This is a description of a teaching experience. You can use markdown like any other post.
+This is a summary of courses taught from 2013/S1 to 2019/S2 at University Center of Belo Horizonte (UniBH). 
 
 2019/S2
-======
+====
+Courses:
+  * Introduction to Power Electronics
+  * Introduction to Power Electronics Laboratory
+  * Analog Electronics
+  * Analog Electronics Laboratory
+  * Electrical Circuits 1
+  * Electrical Circuits 1 Laboratory
+  * Fundamentals of Control Systems
+  * Capstone Project - Design
 
 2019/S1
-======
+====
+Courses:
+  * Digital Electronics
+  * Digital Electronics Laboratory
+  * Physics I
+  * Project Management
+  * Undergraduate Interdisciplinary Project
+  * Capstone Project - Design
 
 2018/S2
-======
+====
+Courses:
+  * Introduction to Power Electronics
+  * Introduction to Power Electronics Laboratory
+  * Digital Electronics
+  * Digital Electronics Laboratory
+  * Introduction to Electrical and Magnetic Materials
+  * Undergraduate Interdisciplinary Project
+  * Capstone Project - Design
+  * Internship Advising
 
 2018/S1
-======
+====
+Courses:
+  * Analog Electronics
+  * Analog Electronics Laboratory
+  * Digital Electronics
+  * Digital Electronics Laboratory
+  * Undergraduate Interdisciplinary Project
+  * Capstone Project - Design
 
 2017/S2
-======
+====
+Courses:
+  * Digital Electronics
+  * Digital Electronics Laboratory
+  * Undergraduate Interdisciplinary Project
+  * Capstone Project - Design
 
 2017/S1
-======
+====
+Courses:
+  * Analog Electronics
+  * Analog Electronics Laboratory
+  * Undergraduate Interdisciplinary Project
+  * Capstone Project - Design
 
 2016/S2
-======
+====
+Courses:
+  * Analog Electronics
+  * Analog Electronics Laboratory
 
 2016/S1
-======
+====
+Courses:
+  * Analog Electronics
+  * Analog Electronics Laboratory
+  * Undergraduate Interdisciplinary Project
 
 2015/S2
-======
+====
+Courses:
+  * Digital Electronics
+  * Digital Electronics Laboratory
 
 2015/S1
-======
+====
+Courses:
+  * Digital Electronics
+  * Digital Electronics Laboratory
 
 2014/S2
-======
+====
+Courses:
+  * Electrical Circuits 1 Laboratory
+  * Digital Electronics
+  * Digital Electronics Laboratory
 
 2014/S1
-======
+====
+Courses:
+  * Electrical Circuits 1 Laboratory
 
 2013/S2
-======
+====
 Courses:
-  * Electrical Circuits 1 (Laboratory)
-  * Analog Electronics (Laboratory)
+  * Electrical Circuits 1 Laboratory
+  * Analog Electronics Laboratory
 
 2013/S1
-======
+====
 Courses:
   * Electrical Circuits 1 (Laboratory)
