--- a/_teaching/2012~2011-teaching.md
+++ b/_teaching/2012~2011-teaching.md
@@ -8,20 +8,30 @@ date: 2014-01-01
 location: "Vespasiano, Brazil"
 ---
 
-This is a description of a teaching experience. You can use markdown like any other post.
+Summary of classes taught at the UTRAMIG in the Mechatronics technical course from 2011 to 2012.
 
-
-2013/S1
-====
 
 2012/S2
 ====
+Courses:
+  * Fundamentals of Electrical Machinery and Control
 
 2012/S1
 ====
+Courses:
+  * Fundamentals of Electrical Machinery and Control
 
 2011/S2
 ====
+Courses:
+  * AutoCAD
+  * Fundamentals of Electricity
+  * Fundamentals of Electrical Machinery
 
 2011/S1
 ====
+Courses:
+  * AutoCAD
+  * Fundamentals of Electricity
+  * Introduction to Electronics
+  * Fundamentals of Electrical Machinery
