--- a/_teaching/2020~2013-teaching.md
+++ b/_teaching/2020~2013-teaching.md
@@ -1,5 +1,5 @@
 ---
-title: "Teaching experience 2"
+title: "Undergrad teaching experience"
 collection: teaching
 type: "Undergraduate Course"
 permalink: /teaching/2020~2013-teaching
