--- a/_teaching/2012~2011-teaching.md
+++ b/_teaching/2012~2011-teaching.md
@@ -1,5 +1,5 @@
 ---
-title: "Teaching experience 1"
+title: "Technical teaching experience"
 collection: teaching
 type: "Technical course"
 permalink: /teaching/2012~2011-teaching
