--- a/_teaching/2012~2011-teaching.md
+++ b/_teaching/2012~2011-teaching.md
@@ -8,7 +8,7 @@ date: 2014-01-01
 location: "Vespasiano, Brazil"
 ---
 
-Summary of classes taught at the UTRAMIG in the Mechatronics technical course from 2011 to 2012.
+Summary of classes taught at UTRAMIG in the Mechatronics technical course from 2011 to 2012.
 
 
 2012/S2
