--- a/_teaching/2019~2013-teaching.md
+++ b/_teaching/2019~2013-teaching.md
@@ -10,19 +10,20 @@ location: "Belo Horizonte, Brazil"
 
 This is a summary of activities and courses taught from 2013/S1 to 2019/S2 at University Center of Belo Horizonte (UniBH). 
 
-Undergraduate Advisinng (Capstone Projects
+Undergraduate Advising
 ====
-* Cristiano Lopes Barbosa and Emerson Junio Costa Thomas, 2019
-* Lucas de Sousa Oliveira, 2019
-* André Carlos Souza Valadão and Thiago Felipe Andrade Oliveira, 2019
-* Glauber Stallone Siqueira and Paulo Henrique Mendes Granja, 2018 
-* Gleison de Almeida Libério, 2018 
-* Gabriel da Silva Pinto and Nataniel Nascentes Pereira, 2018 
-* Rubens Tadeu Gomes dos Reis, 2018
-* Alcyberg da Silva and Caio Otaviano do Carmo, 2018
-* David José da Silva and Jacqueline Celestina Porto, 2017 
-* Kleydson Braga Guimarães and Renner Gustavo Ferreira de Oliveira, 2017
-* Nathanael Camba Nicholls Sathler, 2017
+Capstone Projects:
+  * Cristiano Lopes Barbosa and Emerson Junio Costa Thomas, 2019
+  * Lucas de Sousa Oliveira, 2019
+  * André Carlos Souza Valadão and Thiago Felipe Andrade Oliveira, 2019
+  * Glauber Stallone Siqueira and Paulo Henrique Mendes Granja, 2018 
+  * Gleison de Almeida Libério, 2018 
+  * Gabriel da Silva Pinto and Nataniel Nascentes Pereira, 2018 
+  * Rubens Tadeu Gomes dos Reis, 2018
+  * Alcyberg da Silva and Caio Otaviano do Carmo, 2018
+  * David José da Silva and Jacqueline Celestina Porto, 2017 
+  * Kleydson Braga Guimarães and Renner Gustavo Ferreira de Oliveira, 2017
+  * Nathanael Camba Nicholls Sathler, 2017
 
 
 2019/S2
